Verified intro and method and combined files

--- a/method.tex
+++ b/method.tex
@@ -1,24 +1,24 @@
 \section{Method}
 \subsection{Research Goal}
- We will investigate the outcome of retrospectives, focusing on the organizational learning that happens through retrospectives and the characteristics of the retrospective. When we say characteristics of the retrospective we will investigate the output of conducting retrospectives, the processes used and the impediments that faces the retrospective. We will investigate these characteristics in the context of existing academic work. \textit{Our goal for this study is to investigate the outcome returned from the retrospective in terms of organizational learning and retrospective characteristics.} Elaborating on this goal we get two sub-goals: 
+ This article will investigate the outcome of retrospectives, focusing on the organizational learning that happens through retrospectives and the characteristics of the retrospective. When we say characteristics of the retrospective we investigate the output of conducting retrospectives, the processes used and the impediments that faces the retrospective. We investigate these characteristics in the context of existing academic work. \textit{Our goal for this study is to investigate the outcome returned from the retrospective in terms of organizational learning and retrospective characteristics.} Elaborating on this goal we get two sub-goals:
 
 \begin{enumerate}
-	\item What are the main characteristics in current retrospective practices, in terms of outcome, processes and impediments? 
-	\item How is learning achieved through current retrospective practices, in light of organizational learning theory? 
+	\item What are the main characteristics in current retrospective practices, in terms of outcome, processes and impediments?
+	\item How is learning achieved through current retrospective practices, in light of organizational learning theory?
 \end{enumerate}
 
-The first sub-goal relates to the characteristics of the retrospective. We will throughout this study investigate and describe which characteristics are current in todays retrospective. We will focus on the output, the processes used and the impediments. When we say output we will investigate what improvement opportunities are created, which improvements are actually implemented and how the enthusiasm evolves as a result of the retrospective. We will also investigate the processes used by practitioners of the retrospective and the impediments that hinder them from returning value. 
+The first sub-goal relates to the characteristics of the retrospective. We throughout this study investigate and describe which characteristics are current in todays retrospective. We will focus on the output, the processes used and the impediments. When we say output we investigate what improvement opportunities are created, which improvements are actually implemented and how the enthusiasm evolves as a result of the retrospective. We also investigate the processes used by practitioners of the retrospective and the impediments that hinder them from returning value. 
 
-The second sub-goal will investigate the learning achieved through the retrospective practice. We will employ the learning theory described by Argyris and Schön \cite{Argyris1996} and compare the governing values of Model I and Model II against the results we see from our case studies. We will also investigate which types of learning, single-, double-, or triple-loop, occur through the retrospective practice. 
+The second sub-goal investigate the learning achieved through the retrospective practice. We employ the learning theory described by Argyris and Schön \cite{Argyris1996} and compare the governing values of their Model I and Model II against the results we see from our case studies. We also investigate which types of learning, single-, double-, or triple-loop, occur through the retrospective practice.
 
 \subsection{Research Design}
-For this study we will conduct a multiple-case study to investigate our research goal. It will consist of one depth study and one breadth study. A short summary of the research design can be seen in \autoref{table:research-design}. 
+In this study we conducted a multiple-case study to investigate our research goal. It consisted of one depth study and one breadth study. A short summary of the research design can be seen in \autoref{table:research-design}.
 
-Our first case study is a depth study investigating the long-term practice of one retrospective practicing agile development team. This will be done through analyzing a set of retrospective reports using tabulations and then reflect on the results together with the team. 
+Our first case study is a depth study investigating the long-term practice of one retrospective practicing agile development team. This is done through analyzing a set of retrospective reports using tabulations and then reflect on the results of this analysis together with the team.
 
-The second case study is a breadth study investigating the retrospective practices of other teams. This will be done interviewing representatives from different retrospective practicing teams.
+The second case study is a breadth study investigating the retrospective practices of other teams. This is done by interviewing representatives from different retrospective practicing teams.
 
-Our analysis method consists of two parts. The first part is a descriptive discussion on the results found during the two case studies that focuses on the characteristics of the retrospective practice. The second analysis method is comparing our results against the organizational learning framework created by Argyris and Schön \cite{Argyris1996} specifically the governing values of Model I and Model II. 
+Our analysis method consists of two parts. The first part is a descriptive discussion on the results found during the two case studies that focuses on the characteristics of the retrospective practice. The second analysis method is comparing our results against the organizational learning framework created by Argyris and Schön \cite{Argyris1996} specifically the governing values of Model I and Model II.
 
 \begin{table}[!h]
 	\begin{center}
@@ -42,5 +42,3 @@ Our analysis method consists of two parts. The first part is a descriptive discu
 	}
 \end{center}
 \end{table}
-
-
