--- a/results.tex
+++ b/results.tex
@@ -1,11 +1,11 @@
-\section{discussion} % (fold)
-\label{sec:discussion}
+\section{results} % (fold)
+\label{sec:results}
 
 \subsection{Retrospective Characteristics}
-In this section we will first describe some key characteristics found during our depth study. We will then continue describing the output, processes and impediments found in both of our studies. 
+In this section we will first describe some key characteristics found during our depth study. We will then continue describing the output, processes and impediments found in both of our studies.
 
 \subsubsection{Key Characteristics}
-From our depth study of team Zulu we found some key numbers and these numbers can also be seen in \autoref{table:key-numbers}.The retrospective reports spanned over a period of five years from August 2009 to November 2014. This amounts to 278 weeks and we are going to refer to week numbers from the first retrospective for the remainder of this report. 
+From our depth study of team Zulu we found some key numbers and these numbers can also be seen in \autoref{table:key-numbers}.The retrospective reports spanned over a period of five years from August 2009 to November 2014. This amounts to 278 weeks and we are going to refer to week numbers from the first retrospective for the remainder of this report.
 \begin{table}[!h]
 	\begin{center}
 	\caption{Some key numbers from the retrospectives}
@@ -38,7 +38,7 @@ In terms of organizational learning each action in team Zulu's retrospective rep
 		\hline
 		Category & \multicolumn{2}{|c|}{All Actions} & \multicolumn{2}{|c|}{Active Actions}  \\
 		\cline{2-5}
-		& Number & Percentage & Number & Percentage \\	
+		& Number & Percentage & Number & Percentage \\
 		\hline
 		Single-loop & 227 & 66.4\% & 41 & 66.1\% \\
 		Double-loop & 93 & 27.2\% & 16 & 25.8\% \\
@@ -51,7 +51,7 @@ In terms of organizational learning each action in team Zulu's retrospective rep
 
 
 \subsubsection{Enthusiasm}
-Our case-studies revealed that enthusiasm both inflicted the retrospective and was affected by it. The results revealed that enthusiasm could create both a positive loop and a negative loop. They also revealed some factors that affected the enthusiasm, being oversight and ownership and trust. We will describe each below. 
+Our case-studies revealed that enthusiasm both inflicted the retrospective and was affected by it. The results revealed that enthusiasm could create both a positive loop and a negative loop. They also revealed some factors that affected the enthusiasm, being oversight and ownership and trust. We will describe each below.
 
 \paragraph{Positive Loop}
 Described by several teams, Alfa, Delta, Echo and Zulu, enthusiasm was able to be a part of a positive loop related to the retrospective. The loop could be described as the following:
@@ -60,13 +60,13 @@ Described by several teams, Alfa, Delta, Echo and Zulu, enthusiasm was able to b
 \textit{If the retrospective produced any implementable actions and those actions were implemented it would produce more enthusiasm for the retrospective practice and therefore increase the chance of future actions actually being implemented.}
 \end{quote}
 
-It was emphasized that change was important for the retrospective practice by all the teams where the subject came up. It would produce enthusiasm and help improve the working practices. 
+It was emphasized that change was important for the retrospective practice by all the teams where the subject came up. It would produce enthusiasm and help improve the working practices.
 
 \paragraph{Negative Loop}
-As two sides of a coin enthusiasm could, in addition to create a positive loop, create a negative loop. The SCRUM master of team Charlie told us that unresolved actions could create a negative loop, where enthusiasm for the retrospective went down as improvements never came and the low enthusiasm made sure fewer actions were implemented. And that it could be a challenge. 
+As two sides of a coin enthusiasm could, in addition to create a positive loop, create a negative loop. The SCRUM master of team Charlie told us that unresolved actions could create a negative loop, where enthusiasm for the retrospective went down as improvements never came and the low enthusiasm made sure fewer actions were implemented. And that it could be a challenge.
 
 \paragraph{Oversight}
-From the second feedback session with team Zulu during the depth analysis we learned that oversight over implementation rate of actions had affected the retrospective. The team had not previously appreciated just how much had been accomplished, and that this had lead to a lower enthusiasm around the retrospective. When the team was confronted with the completion rate they were surprised and pleased with the amount they had accomplished. In order to continue this more objective oversight the team decided to create a dashboard in order to have better view of the statistics concerning implemented versus unimplemented actions as described in \autoref{dashboard}. 
+From the second feedback session with team Zulu during the depth analysis we learned that oversight over implementation rate of actions had affected the retrospective. The team had not previously appreciated just how much had been accomplished, and that this had lead to a lower enthusiasm around the retrospective. When the team was confronted with the completion rate they were surprised and pleased with the amount they had accomplished. In order to continue this more objective oversight the team decided to create a dashboard in order to have better view of the statistics concerning implemented versus unimplemented actions as described in \autoref{dashboard}.
 
 
 \paragraph{External Facilitator}
@@ -74,7 +74,7 @@ There were different views on facilitating retrospectives. Several teams used an
 
 The use of external facilitators was an interesting concept to team Zulu, and the one experience they had with using one had been a positive experience. When the team Zulu SCRUM master was asked about if he felt like a leader, or if the team viewed him as a leader, the SCRUM master said he felt more like a facilitator, and that he didn't think the team considered him a leader. Though he was mindful of this possibility. When asked about the inclusion of the project leader he considered as long as the team was not afraid to speak their minds this could make it easier to make strategic decisions.
 
-Other teams had not been using external facilitators. They used their regular SCRUM master. Common for the SCRUM masters were that they all felt like they were a facilitator rather than a leader during the retrospectives. Those we spoke to about external facilitators were positive to the idea and mentioned they might want to try it out in the future. 
+Other teams had not been using external facilitators. They used their regular SCRUM master. Common for the SCRUM masters were that they all felt like they were a facilitator rather than a leader during the retrospectives. Those we spoke to about external facilitators were positive to the idea and mentioned they might want to try it out in the future.
 
 \begin{table}[!h]
 	\begin{center}
@@ -93,7 +93,7 @@ Other teams had not been using external facilitators. They used their regular SC
 
 \subsubsection{Implementation}
 \label{question-6}
-The steps taken to implement actions created during the retrospective and whether unresolved actions were a problem varied between the interviewed teams. 
+The steps taken to implement actions created during the retrospective and whether unresolved actions were a problem varied between the interviewed teams.
 
 \begin{table}[!h]
 	\begin{center}
@@ -101,7 +101,7 @@ The steps taken to implement actions created during the retrospective and whethe
 	\label{table:follow-up-techique}
 	\makebox[\textwidth]{%
 		\begin{tabular}{ l | l | l }
-		Team & Follow-up technique & Satisfied \\	
+		Team & Follow-up technique & Satisfied \\
 		\hline
 		Echo, Delta, Alfa, Foxtrot, Zulu & Assigning Name to action & Yes \\
 		Charlie, Bravo & Assigning to group & No \\
