--- a/article.tex
+++ b/article.tex
@@ -20,8 +20,67 @@
 \begin{abstract}
 \end{abstract}
 
-\include{introduction}
-\include{method}
+\section{introduction}
+With the increasing demand of expected delivery from customers, many software development teams adopted agile methodologies as a development practice. With the introduction of these methodologies the practice ``Retrospective'' was introduced. It's roots based in reflective practices from organizational learning such as post-project reviews, experience reports and after action reviews. The purpose of the retrospective is allowing teams to look back at their last development phase and learn from it. Learning from the last period of time could provide useful knowledge that could be used to create improvement opportunities for future iterations or projects.
+
+There have been several studies into the retrospective practice. Dingsøyr, Moe and Nytrø compared light-weight postmortem reviews against experience reports and found that the two provides different kind of experience. light-weight postmortem focuses on implementation, administration, developers and maintence, while experience reports yield experience related to contract issues, design and technology.
+
+On the subject of retrospectives techniques several publications have been done. Stålhane, Dingsøyr, Hanssen and Moe\cite{Hanssen2003} compared two methods of semi-structured interviews and KJ-session and found that both may be applied to harvest knowledge. Bjarnason and Regnell\cite{Bjarnason2012} proposed the evidence-based timelines method as a way of conducting retrospectives. Bjørnson, Wang and Arisholm\cite{bjornson2009} compared the effectiveness of root-cause analysis against that of fishbone diagrams and found that root-cause analysis was more effective as the fishbone diagram limits the way issue were related to each other. Dingsøyr\cite{Dingsoyr2004} have written an article on the subject highlighting the purpose of the retrospective as well as discussing three possible approaches. Dølvik and Stålesen\cite{Dolvik2014} did a literature review on agile retrospectives and found that different techniques would fit different goals, and they found a lack of research considering follow-up on the issues identified during the retrospective. There also several experience reports on the subject, two of them Maham\cite{Maham2008}, Kinoshita\cite{Kinoshita2008}, which describes how to plan and facilitate retrospectives as well as describing different techniques. Finally Derby and Larsen\cite{Larsen2006} has written a book on the subject, describing the purpose and various techniques on conducting the retrospective.
+
+Drury, Conboy and Power\cite{Drury2012} found in a study on obstacles to decision making in agile development teams that the SCRUM-master prioritizes other tasks than follow-up on actions from retrospectives. They proposed that discussion on decision-making should be a part of the retrospective. And they found that some regarded the retrospective as a waste of time while others found it useful. Comparing to this Stålhane, Dingsøyr, Hanssen and Moe\cite{Hanssen2003} found that the participants of their case-study regarded the postmortem as useful.
+
+Zedtwitz\cite{Zedtwitz2002} identified several barriers for learning in post-project reviews in R\&D. Two psychological barriers were identified; inability to reflect and memory bias. Managerial barriers were time constraints and bureaucratic overhead. Epistemological barriers such as difficulty to generalize and tacitness of process knowledge were also identified by Zedtwitz. The last barriers were team-based and identified as reluctance to blame and poor internal communication.
+
+\subsection{Retrospective Definitions}
+There are several different definitions of retrospectives. Dingsøyr \cite{Dingsoyr2004} defines postmortem as a collective learning activity in order to improve future practice through organized reflection. Derby and Larsen \cite{Larsen2006} defines retrospectives in another way: \textit{"A special meeting where the team gathers after completing an increment of work to inspect and adapt their methods and teamwork. Retrospectives enable whole-team learning, act as a catalysts for change, and generate action."}
+
+We define retrospectives as the following:\textit{Retrospectives is a process that aims to facilitate shared learning within a team or an organization after a learning event, and thus create a focus to improve current work practices or teamwork.}
+
+\section{Method}
+\subsection{Research Goal}
+ This article will investigate the outcome of retrospectives, focusing on the organizational learning that happens through retrospectives and the characteristics of the retrospective. When we say characteristics of the retrospective we investigate the output of conducting retrospectives, the processes used and the impediments that faces the retrospective. We investigate these characteristics in the context of existing academic work. \textit{Our goal for this study is to investigate the outcome returned from the retrospective in terms of organizational learning and retrospective characteristics.} Elaborating on this goal we get two sub-goals:
+
+\begin{enumerate}
+	\item What are the main characteristics in current retrospective practices, in terms of outcome, processes and impediments?
+	\item How is learning achieved through current retrospective practices, in light of organizational learning theory?
+\end{enumerate}
+
+The first sub-goal relates to the characteristics of the retrospective. We throughout this study investigate and describe which characteristics are current in todays retrospective. We will focus on the output, the processes used and the impediments. When we say output we investigate what improvement opportunities are created, which improvements are actually implemented and how the enthusiasm evolves as a result of the retrospective. We also investigate the processes used by practitioners of the retrospective and the impediments that hinder them from returning value.
+
+The second sub-goal investigate the learning achieved through the retrospective practice. We employ the learning theory described by Argyris and Schön \cite{Argyris1996} and compare the governing values of their Model I and Model II against the results we see from our case studies. We also investigate which types of learning, single-, double-, or triple-loop, occur through the retrospective practice.
+
+\subsection{Research Design}
+In this study we conducted a multiple-case study to investigate our research goal. It consisted of one depth study and one breadth study. A short summary of the research design can be seen in \autoref{table:research-design}.
+
+Our first case study is a depth study investigating the long-term practice of one retrospective practicing agile development team. This is done through analyzing a set of retrospective reports using tabulations and then reflect on the results of this analysis together with the team.
+
+The second case study is a breadth study investigating the retrospective practices of other teams. This is done by interviewing representatives from different retrospective practicing teams.
+
+Our analysis method consists of two parts. The first part is a descriptive discussion on the results found during the two case studies that focuses on the characteristics of the retrospective practice. The second analysis method is comparing our results against the organizational learning framework created by Argyris and Schön \cite{Argyris1996} specifically the governing values of Model I and Model II.
+
+\begin{table}[!h]
+	\begin{center}
+	\caption{Research design for this multiple-case study.}
+	\label{table:research-design}
+	\makebox[\textwidth]{%
+		\begin{tabular}{l p{0.7\textwidth}}
+		\hline
+		\textit{Step} & \textit{Description} \\
+		\hline
+		\textbf{Case 1} & Depth Study \\
+		Content Analysis & Tabulation Analysis of Retrospective Reports \\
+		Feedback Sessions & Reflection with team about the results of the content analysis. \\[12pt]
+		\textbf{Case 2} & Breadth Study \\
+		Interview Sessions & Interview different teams \\[12pt]
+		\textbf{Analysis Method} & \\
+		Characteristics & Descriptive Discussion on Results \\
+		Organizational learning & Compare results against Argyris and Schön's \cite{Argyris1996} governing values. \\
+		\hline
+		\end{tabular}
+	}
+\end{center}
+\end{table}
+
 \include{results}
 \include{discussion}
 \include{conclusion}
